updated index file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Niha Tarlekar | Web Developer</title>
         <meta charset="utf-8">
+        <meta http-equiv="cache-control" content="no-cache">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
