--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.aakarrealties.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/aakar-realties.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.ash-software.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/ash-software.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -254,14 +254,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.enoticeninja.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/enotice.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://platinumgroups.in/platinum-glory/platinum-glory.html" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/glory.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -277,14 +277,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://www.innocenttimes.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/innocent-times.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://messungsmart.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/messung.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -295,14 +295,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://platinumgroups.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/platinum-group.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.premierfoodsupplies.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/premier-food-supplies.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -313,14 +313,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://rekach.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/rekach.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.raunaqengineering.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/raunaq.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -331,14 +331,14 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://shardainfratech.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/sharda.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://step9.co.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/step9.mp4" type="video/mp4" />
                                             </video>
                                         </div></a>
@@ -349,7 +349,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://swarsagarfest.org/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
+                                           <video class="web-image" autoplay loop muted>
                                                 <source src="video/swarsagar.mp4" type="video/mp4"/>
                                             </video>
                                         </div></a>
