international aviation project added

--- a/index.html
+++ b/index.html
@@ -283,79 +283,83 @@
                                         </div></a>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                                        <a href="https://messungsmart.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/messung.mp4" type="video/mp4" />
-                                            </video>
-                                        </div></a>
+                                        <a href="https://internationalaviation.in/" target="_blank"><div class="work-details">
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/internationalaviation.mp4" type="video/mp4" />
+                                             </video>
+                                         </div></a>    
                                     </div>
                                 </div>
                             </div>
                             <div class="work-row">
                                 <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                        <a href="https://messungsmart.com/" target="_blank"><div class="work-details">
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/messung.mp4" type="video/mp4" />
+                                             </video>
+                                         </div></a>                           
+                                    </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://platinumgroups.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/platinum-group.mp4" type="video/mp4"/>
-                                            </video>
-                                        </div></a>
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/platinum-group.mp4" type="video/mp4"/>
+                                             </video>
+                                         </div></a>                                      
                                     </div>
+                                </div>
+                            </div>
+                            <div class="work-row">
+                                <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.premierfoodsupplies.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/premier-food-supplies.mp4" type="video/mp4" />
-                                            </video>
-                                        </div></a>
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/premier-food-supplies.mp4" type="video/mp4" />
+                                             </video>
+                                         </div></a>                                      
                                     </div>
-                                </div>
-                            </div>
-                            <div class="work-row">
-                                <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://rekach.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/rekach.mp4" type="video/mp4"/>
-                                            </video>
-                                        </div></a>
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/rekach.mp4" type="video/mp4"/>
+                                             </video>
+                                         </div></a>                                      
                                     </div>
+                                </div>
+                            </div>
+                            <div class="work-row">
+                                <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="https://www.raunaqengineering.com/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/raunaq.mp4" type="video/mp4" />
-                                            </video>
-                                        </div></a>
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/raunaq.mp4" type="video/mp4" />
+                                             </video>
+                                         </div></a>                                   
                                     </div>
-                                </div>
-                            </div>
-                            <div class="work-row">
-                                <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                         <a href="http://shardainfratech.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/sharda.mp4" type="video/mp4"/>
-                                            </video>
-                                        </div></a>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                                        <a href="http://step9.co.in/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/step9.mp4" type="video/mp4" />
-                                            </video>
-                                        </div></a>
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/sharda.mp4" type="video/mp4"/>
+                                             </video>
+                                         </div></a>                             
                                     </div>
                                 </div>
                             </div>
                             <div class="work-row">
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                                        <a href="http://swarsagarfest.org/" target="_blank"><div class="work-details">
-                                           <video id="video" class="web-image" autoplay loop muted>
-                                                <source src="video/swarsagar.mp4" type="video/mp4"/>
-                                            </video>
-                                        </div></a>
+                                        <a href="http://step9.co.in/" target="_blank"><div class="work-details">
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/step9.mp4" type="video/mp4" />
+                                             </video>
+                                         </div></a>  
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                                        
+                                        <a href="http://swarsagarfest.org/" target="_blank"><div class="work-details">
+                                            <video id="video" class="web-image" autoplay loop muted>
+                                                 <source src="video/swarsagar.mp4" type="video/mp4"/>
+                                             </video>
+                                         </div></a>
                                     </div>
                                 </div>
                             </div>
