work gif changes

--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
         </div>
             <!-- experience -->
             <div id="experience" class="experience">
-                <img src="images/work-exp.gif" class="img-fluid img-exp" alt="gif">
+                <img src="images/work.gif" class="img-fluid img-exp" alt="gif">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">   
+                
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="exp-caption">
