--- a/index.html
+++ b/index.html
@@ -884,6 +884,11 @@
             })
         })
     </script>
+    <script>
+        $("html").on("contextmenu", function (e) {
+            return false;
+        });
+    </script>
 </body>
 
 </html>
