--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="icon" href="images/favicon.png" alt="favicon">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178753804-1">
     </script>
+    <script>window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-178753804-1');
+    </script>
 </head>
 
 <body>
@@ -877,11 +884,7 @@
             })
         })
     </script>
-    <script>
-        $("html").on("contextmenu", function (e) {
-            return false;
-        });
-    </script>
+  
 </body>
 
 </html>
