--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                             <div class="about-caption-1">
                                 <p>I’m a Website Developer specialized in responsive website with Bootstrap framework
                                     with International Based Coding. I build user-friendly front-end interfaces with
-                                    HTML 5, CSS 3, JavaScript/ Jquery with latest Web Standards Semantic Code.</p>
+                                    HTML 5, CSS 3, JavaScript/ Jquery and React Js with latest Web Standards Semantic
+                                    Code.</p>
                                 <p>I provide you International based Standard Coding with Optimized for run your Website
                                     smoothly. </p>
                                 <p>Wanna hire me for working on your company for full time or part time? </p>
