--- a/index.html
+++ b/index.html
@@ -420,6 +420,44 @@
                         <div class="work-row">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <img src="images/platinum.png" class="img-portfolio" alt="image">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <div class="project-details">
+                                        <h2>Platinum Groups</h2>
+                                        <p>We build functional, contemporary spaces. We are a Pune based construction
+                                            group on a mission to offer valuable spaces to its clients with thoughtful
+                                            designs and meticulous planning. </p>
+                                        <a href="https://platinumgroups.in/" target="_blank"><button
+                                                class="read-more">Read More</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-row">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <div class="project-details-1">
+                                        <h2>Platinum Glory</h2>
+                                        <p>Life is but an experience, and that experience is influenced by our everyday
+                                            interactions and the space we reside in. Make life a blissful experience
+                                            with the comfort of a well-made home, a vibrant community, and a desirable
+                                            location.</p>
+                                        <div class="more">
+                                            <a href="https://platinumgroups.in/platinum-glory/platinum-glory.html"
+                                                target="_blank"><button class="read-more-1">Read More</button></a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <img src="images/platinum-glory.png" class="img-portfolio" alt="image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-row">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                                     <img src="images/premier food supplies.png" class="img-portfolio" alt="image">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
@@ -498,7 +536,7 @@
                                     <img src="images/step9.png" class="img-portfolio" alt="image">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                                    <div class="project-details-1">
+                                    <div class="project-details">
                                         <h2>Step 9</h2>
                                         <p>We have worked in the service industry for the past 13 years, delivering
                                             delicious
@@ -508,11 +546,9 @@
                                             tediouschallenge they face—managing multiple contacts and vendors for
                                             specific
                                             tasks. </p>
-                                        <div class="more">
-                                            <a href="http://step9.co.in/" target="_blank"><button
-                                                    class="read-more-1">Read
-                                                    More</button></a>
-                                        </div>
+
+                                        <a href="http://step9.co.in/" target="_blank"><button class="read-more">Read
+                                                More</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -524,7 +560,7 @@
                                             <h2>Swarsagar Fest</h2>
                                             <p>Swarsagar, a music fest that comes every year to give a musical treat to
                                                 all the
-                                                music lovers. Offering a mixed treat ofclassical, traditional &
+                                                music lovers. Offering a mixed treat of classical, traditional &
                                                 contemporary
                                                 artists, who come live just to give you a musical bliss.</p>
                                             <a href="http://swarsagarfest.org/" target="_blank"><button
@@ -755,6 +791,47 @@
                                                     More</button></a>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-row">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <img src="images/platinum.png" class="img-portfolio" alt="image">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <div class="project-details">
+                                        <h2>Platinum Groups</h2>
+                                        <p>We build functional, contemporary spaces. We are a Pune based construction
+                                            group on a mission to offer valuable spaces to its clients with thoughtful
+                                            designs and meticulous planning.</p>
+                                        <div class="more-1">
+                                            <a href="https://platinumgroups.in/" target="_blank"><button
+                                                    class="read-more">Read More</button></a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-row">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <img src="images/platinum-glory.png" class="img-portfolio" alt="image">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                                    <div class="project-details">
+                                        <h2>Platinum Glory</h2>
+                                        <p>Life is but an experience, and that experience is influenced by our everyday
+                                            interactions and the space we reside in. Make life a blissful experience
+                                            with the comfort of a well-made home, a vibrant community, and a desirable
+                                            location.</p>
+                                        <div class="more-1">
+                                            <a href="https://platinumgroups.in/platinum-glory/platinum-glory.html"
+                                                target="_blank"><button class="read-more">Read More</button></a>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
