--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                             mastering the industry standards and bydeploying best Engineering practices,
                                             it soon
                                             obtained Class-I(A) registration under P.W.D of Govt of Maharashtra.</p>
-                                        <a href="http://shardainfratech.in/" target="_blank"><button
+                                        <a href="https://nihal-tarlekar.github.io/sharda_infratech/" target="_blank"><button
                                                 class="read-more">Read
                                                 More</button></a>
                                     </div>
@@ -911,7 +911,7 @@
                                             soon
                                             obtained Class-I(A) registration under P.W.D of Govt of Maharashtra.</p>
                                         <div class="more-1">
-                                            <a href="http://shardainfratech.in/" target="_blank"><button
+                                            <a href="https://nihal-tarlekar.github.io/sharda_infratech/" target="_blank"><button
                                                     class="read-more">Read
                                                     More</button></a>
                                         </div>
