--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                             multiple
                                             domains.</p>
                                         <div class="more">
-                                            <a href="https://www.ash-software.com/" target="_blank"><button
+                                            <a href="https://nihal-tarlekar.github.io/ash_software/" target="_blank"><button
                                                     class="read-more-1">Read More</button></a>
                                         </div>
                                     </div>
@@ -692,7 +692,7 @@
                                             multiple
                                             domains.</p>
                                         <div class="more">
-                                            <a href="https://www.ash-software.com/" target="_blank"><button
+                                            <a href="https://nihal-tarlekar.github.io/ash_software/" target="_blank"><button
                                                     class="read-more-1">Read More</button></a>
                                         </div>
                                     </div>
