--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                             spanning over ten years, we've successfully constructed many projects for a
                                             diverse
                                             market. </p>
-                                        <a href="https://www.aakarrealties.com/" target="_blank"><button
+                                        <a href="https://nihal-tarlekar.github.io/aakar_realties/" target="_blank"><button
                                                 class="read-more">Read
                                                 More</button></a>
                                     </div>
@@ -671,7 +671,7 @@
                                             diverse
                                             market. </p>
                                         <div class="more-1">
-                                            <a href="https://www.aakarrealties.com/" target="_blank"><button
+                                            <a href="https://nihal-tarlekar.github.io/aakar_realties/" target="_blank"><button
                                                     class="read-more">Read More</button></a>
                                         </div>
                                     </div>
