--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                                             Midwest and Southwest. We curatethe finest products for retailers &
                                             restaurants from
                                             across Asia. </p>
-                                        <a href="https://www.premierfoodsupplies.com/" target="_blank"><button
+                                        <a href="https://nihal-tarlekar.github.io/premier_food_supplies/" target="_blank"><button
                                                 class="read-more">Read More</button></a>
                                     </div>
                                 </div>
@@ -851,7 +851,7 @@
                                             from
                                             across Asia. </p>
                                         <div class="more-1">
-                                            <a href="https://www.premierfoodsupplies.com/" target="_blank"><button
+                                            <a href="https://nihal-tarlekar.github.io/premier_food_supplies/" target="_blank"><button
                                                     class="read-more">Read More</button></a>
                                         </div>
                                     </div>
