--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
             <div class="contact-caption">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 sol-12">
-                        <form action="https:///xaylyyyj" method="post" class="contact-form">
+                        <form action="https://formspree.io/xaylyyyj" method="post" class="contact-form">
                             <div class="form-group col-md-12">
                                 <input type="text" class="form-control" id="inputName" name="userName"
                                     placeholder="Name" required>
