--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
                                     <div class="about-caption-1">
                                         <h5>Sharad Institute of Technology College of Engineering, Ichalkaranji <br>(
                                             Dist. Kolhapur, State. Maharashtra)<h5>
-                                                <p>2012-2017</p>
+                                                <p>2013-2017</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                     <div class="about-caption-1">
                                         <h5>Balaji High School and Junior College, Ichalkaranji <br>( Dist. Kolhapur,
                                             State. Maharashtra)</h5>
-                                        <p>2010-2012</p>
+                                        <p>2011-2013</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                     <div class="about-caption-1">
                                         <h5>Vyankatrao High School and Junior College, Ichalkaranji <br>( Dist.
                                             Kolhapur, State. Maharashtra)</h5>
-                                        <p>2005-2010</p>
+                                        <p>2005-2011</p>
                                     </div>
                                 </div>
                             </div>
@@ -194,28 +194,77 @@
                 <h2>Where I've Work</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <img src="images/7747-ai.png" class="img-fluid img-exp" alt="gif">
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                    <div class="about-caption-1">
-                        <h5>Zestorm Technologies Pvt. Ltd, Pune</h5>
-                        <p>December 2020 - April 2021</p>
-                        <ul>
-                            <li>Working knowledge of front end optimization and performance techniques.</li>
-                            <li>Makes design recommendations towards the development of new code or reuse of existing
-                                code.</li>
-                            <li>Crisp Communication with Clients and work as an interface between team members and
-                                Client counterpart.</li>
-                            <li>Taking an active role in structuring our single page applications to make them easy to
-                                maintain and to ensure they are highly modularized.</li>
-                            <li>Experience on working with Custom Directives, Controllers, Services, filters modules of
-                                AngularJS.</li>
-                            <li>Cooperating with the back-end developer in the process of building the RESTful API.</li>
-                            <li>Proficiency in building responsive and mobile optimized websites using Bootstrap.</li>
-                            <li>Worked with CSS3 and bootstrap to create responsive web designs for multiple
-                                departments/pages.</li>
-                        </ul>
+            </div>
+            <div class="about-1">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                        <div class="about-caption-1">
+                            <h5>Graphinet Solution Pvt. Ltd</h5>
+                            <p>November 2022 - Present</p>
+                            <h5>Freelance Web Developer</h5>
+                            <p>April 2021 – October 2022</p>
+                            <ul>
+                                <li>I have been working as a freelance Web Developer, offering a range of services
+                                    including
+                                    user research, usability testing, wireframing and prototyping.</li>
+                                <li>Responsible for marketing, selling services, managing all client relationships,
+                                    controlling budgets, and designing/developing websites and web-based applications
+                                    from
+                                    small to large businesses. </li>
+                                <li>Full-service web needs including, rebuilding or building for the first-time
+                                    websites,
+                                    adding in finding the right hosting dependent upon client needs. Branding and logo
+                                    creation as well as media needs including ad campaigns.</li>
+                                <li>My clients have included International Aviation (Institution of Aviation Training),
+                                    Life
+                                    gear Softech Pvt ltd,
+                                    and Pentasafe Training Academy.</li>
+                                <li>I've enjoyed setting up and running my own business and learned a lot about
+                                    networking,
+                                    budgeting and negotiation.</li>
+                                <li>Developing an ecommerce website, academic websites using the html, CSS, bootstrap,
+                                    JavaScript and WordPress also.</li>
+                                <li>Creating and maintaining the databases using PhpMyAdmin as well as extracting and
+                                    loading the test data on a regular basis for testing purposes.</li>
+                                <li>cPanel provided through web hosting is utilized to manage server and websites.</li>
+                                <li>Responsible for writing all routes, controllers, models, views, and installing gems
+                                    needed for functionality, using asynchronous and defer loading for your CSS and
+                                    JavaScript files, minifying the CSS, JavaScript and HTML and eliminating unnecessary
+                                    JS
+                                    code or file and some extra CSS files because it takes time to read unnecessary
+                                    data.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                        <div class="about-caption-1">
+                            <h5>Zestorm Technologies Pvt. Ltd, Pune</h5>
+                            <p>December 2020 - April 2021</p>
+                            <ul>
+                                <li>Working knowledge of front end optimization and performance techniques.</li>
+                                <li>Makes design recommendations towards the development of new code or reuse of
+                                    existing
+                                    code.</li>
+                                <li>Crisp Communication with Clients and work as an interface between team members and
+                                    Client counterpart.</li>
+                                <li>Taking an active role in structuring our single page applications to make them easy
+                                    to
+                                    maintain and to ensure they are highly modularized.</li>
+                                <li>Experience on working with Custom Directives, Controllers, Services, filters modules
+                                    of
+                                    AngularJS.</li>
+                                <li>Cooperating with the back-end developer in the process of building the RESTful API.
+                                </li>
+                                <li>Proficiency in building responsive and mobile optimized websites using Bootstrap.
+                                </li>
+                                <li>Worked with CSS3 and bootstrap to create responsive web designs for multiple
+                                    departments/pages.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -269,6 +318,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- work -->
     <div id="work" class="work d-none d-sm-block">
